# oh-my-batch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
doc/: thinking-in-omb.md  thinking-in-omb.zh.md
examples/: omb-batch.sh  omb-combo.sh
examples/dynacat-test/: README.md  data.lmp  workflow.sh
examples/dynacat-test/template/: deepmd.json  lammps.inp  plumed.inp
examples/lammps-benchmark/: README.md  run.sh
examples/lammps-benchmark/config/: data.lmp  in.lmp
examples/tesla/: .gitignore  README.md  run.sh
examples/tesla-pimd/00-config/lammps/: lammps.in
examples/tesla-pimd/01-workflow/: iter-basic-dp-lammps-cp2k.sh
examples/tesla/00-config/: aimd.xyz
examples/tesla/00-config/cp2k/: run.sh
examples/tesla/00-config/deepmd/: run.sh
examples/tesla/00-config/lammps/: lammps.in  run.sh
examples/tesla/00-init/: aimd.xyz
examples/tesla/00-init/cp2k/: cp2k.inp
examples/tesla/01-workflow/: iter-basic-dp-lammps-cp2k.sh  iter-basic-lammps-cp2k.sh  iter.sh  setup.sh
oh_my_batch/: __init__.py  __main__.py  batch.py  cli.py  combo.py  job.py  lib.py  shell.py  util.py
oh_my_batch/assets/: __init__.py  functions.sh
tests/: test_combo.py  test_compute.py  test_job.py  test_lsf.py  test_openpbs.py  test_shell.py  test_util.py
tests/golden/: combos.json
