[tool.poetry]
name = "oh-my-batch"
version = "0.0.1.dev0"
description = ""
authors = ["weihong.xu <xuweihong.cn@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "oh_my_batch"}]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
